--- a/pollingo/package.json
+++ b/pollingo/package.json
@@ -37,9 +37,11 @@
     ]
   },
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser": "^2.0.0"
   }
