--- a/pollingo/package.json
+++ b/pollingo/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.0",
     "@testing-library/user-event": "^12.2.2",
+    "express": "^4.17.1",
     "mongoose": "^5.11.5",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
