--- a/pollingo/package.json
+++ b/pollingo/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.0",
     "@testing-library/user-event": "^12.2.2",
     "express": "^4.17.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.11.5",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
